--- a/src/Orc.Automation.Host/Orc.Automation.Host.csproj
+++ b/src/Orc.Automation.Host/Orc.Automation.Host.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0-windows;net6.0-windows</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <AssemblyName>Orc.Automation.Host</AssemblyName>
     <RootNamespace>Orc.Automation.Host</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.6.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
+    <PackageReference Include="Orc.Theming" Version="4.5.0-alpha0151" />
   </ItemGroup>
 
   <ItemGroup>
