data grid model

--- a/src/Orc.Automation/Orc.Automation.csproj
+++ b/src/Orc.Automation/Orc.Automation.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="AutomationControls\AutomationMethods\" />
     <Folder Include="Controls\AutomationInformer\Themes\" />
   </ItemGroup>
 
