--- a/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
+++ b/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
-    <AssemblyName>Orc.Automation.TestSync</AssemblyName>
+    <AssemblyName>TestSync</AssemblyName>
     <RootNamespace>Orc.Automation.TestSync</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
     <PackageId>Orc.Automation.TestSync</PackageId>
@@ -17,26 +17,33 @@
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <StartupObject />
+    <StartupObject>Orc.Automation.TestSync.Program</StartupObject>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="5.12.19" />
+    <PackageReference Include="Catel.Core" Version="5.12.22" />
     <PackageReference Include="Catel.Fody" Version="4.7.0" PrivateAssets="all" />
-	  <PackageReference Include="Costura.Fody" Version="5.7.0" />
-    <PackageReference Include="Fody" Version="6.6.0" PrivateAssets="all">
+    <PackageReference Include="Costura.Fody" Version="5.7.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Fody" Version="6.6.2" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
 	  <PackageReference Include="MethodTimer.Fody" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
-    <PackageReference Include="Obsolete.Fody" Version="5.2.1" PrivateAssets="all" />
-    <PackageReference Include="Orc.CommandLine" Version="4.1.1" />
+    <PackageReference Include="Obsolete.Fody" Version="5.3.0" PrivateAssets="all" />
+    <PackageReference Include="Orc.CommandLine" Version="4.2.0" />
     <PackageReference Include="RestSharp" Version="107.3.0" />
-    <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
+    <PackageReference Include="System.Security.Permissions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Update="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Update="WpfAnalyzers" Version="4.1.1" />
   </ItemGroup>
 
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
