Update to Catel 6

--- a/src/Orc.Automation.Host/Orc.Automation.Host.csproj
+++ b/src/Orc.Automation.Host/Orc.Automation.Host.csproj
@@ -32,19 +32,11 @@
     </PackageReference>
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.6.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
-    <PackageReference Include="Orc.Theming" Version="4.6.0" />
+    <PackageReference Include="Orc.Theming" Version="5.0.0-alpha0016" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Orc.Automation\Orc.Automation.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="NETStandard.Library" Version="2.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
