--- a/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
+++ b/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="5.12.22" />
+    <PackageReference Include="Catel.Core" Version="6.0.0-alpha0993" />
     <PackageReference Include="Catel.Fody" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
@@ -38,14 +38,8 @@
     <PackageReference Include="Obsolete.Fody" Version="5.3.0" PrivateAssets="all" />
     <PackageReference Include="Orc.CommandLine" Version="4.2.0" />
     <PackageReference Include="RestSharp" Version="108.0.2" />
-    <PackageReference Include="System.Security.Permissions" Version="6.0.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="NETStandard.Library" Version="2.0.3" />
-    <PackageReference Update="WpfAnalyzers" Version="4.1.1" />
-  </ItemGroup>
-
+  
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.mat.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.mat.props')" />
 </Project>
