--- a/src/Orc.Automation/Orc.Automation.csproj
+++ b/src/Orc.Automation/Orc.Automation.csproj
@@ -8,6 +8,7 @@
     <PackageVersion>1.0.0-alpha0001</PackageVersion>
     <Description>UI automation library.</Description>
     <PackageTags>automation;controls;</PackageTags>
+    <Nullable>annotations</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
