--- a/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
+++ b/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
@@ -21,11 +21,15 @@
     </PackageReference>
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.6.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
-    <PackageReference Include="Orc.Theming" Version="5.0.0-alpha0184" />
+    <PackageReference Include="Orc.Theming" Version="5.0.0-alpha0198" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Orc.Automation\Orc.Automation.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
