--- a/src/Orc.Automation.Host/Orc.Automation.Host.csproj
+++ b/src/Orc.Automation.Host/Orc.Automation.Host.csproj
@@ -31,6 +31,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.6.0" PrivateAssets="all" />
+    <PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.149" PrivateAssets="all"/>
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
   </ItemGroup>
 
