--- a/src/Orc.Automation/Orc.Automation.csproj
+++ b/src/Orc.Automation/Orc.Automation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows;net8.0-windows</TargetFrameworks>
     <AssemblyName>Orc.Automation</AssemblyName>
@@ -25,13 +25,13 @@
 
   <ItemGroup>
     <PackageReference Include="Catel.Fody" Version="4.9.0" PrivateAssets="all" />
-    <PackageReference Include="Catel.MVVM" Version="6.0.0-alpha1311" />
+    <PackageReference Include="Catel.MVVM" Version="6.0.0" />
     <PackageReference Include="Costura.Fody" Version="5.7.0" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.8.0" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.6.0" PrivateAssets="all" />
-    <PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.149" PrivateAssets="all"/>
+    <PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.149" PrivateAssets="all" />
     <PackageReference Include="MethodTimer.Fody" Version="3.2.2" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.3.0" PrivateAssets="all" />
