base tests class for applications
Task - WildGums - FlexGrid - Fix bugs in Orc.Controls and Libraries concerning FG - 2024-05-06

--- a/src/Orc.Automation.Tests/Orc.Automation.Tests.csproj
+++ b/src/Orc.Automation.Tests/Orc.Automation.Tests.csproj
@@ -49,6 +49,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Orc.Automation\Orc.Automation.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.Build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.Build.shared.explicit.props')" />
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.Build.shared.mat.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.Build.shared.mat.props')" />
