Add support for .net 9

--- a/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
+++ b/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
     <AssemblyName>TestSync</AssemblyName>
     <RootNamespace>Orc.Automation.TestSync</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
