--- a/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
+++ b/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
     <AssemblyName>Orc.Automation.Recorder</AssemblyName>
     <RootNamespace>Orc.Automation.Recorder</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
