--- a/src/Orc.Automation/Orc.Automation.csproj
+++ b/src/Orc.Automation/Orc.Automation.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
     <AssemblyName>Orc.Automation</AssemblyName>
     <RootNamespace>Orc.Automation</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
