--- a/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
+++ b/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows;net10.0-windows</TargetFrameworks>
     <AssemblyName>Orc.Automation.Recorder</AssemblyName>
     <RootNamespace>Orc.Automation.Recorder</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -19,7 +19,7 @@
     <PackageReference Include="Fody" Version="6.9.3" PrivateAssets="all" />
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
-    <PackageReference Include="Orc.Theming" Version="5.3.1" />
+    <PackageReference Include="Orc.Theming" Version="5.4.0-alpha0169" />
   </ItemGroup>
 
   <ItemGroup>
