--- a/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
+++ b/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows;net10.0-windows</TargetFrameworks>
     <AssemblyName>TestSync</AssemblyName>
     <RootNamespace>Orc.Automation.TestSync</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="6.1.4" />
+    <PackageReference Include="Catel.Core" Version="6.2.0-alpha0196" />
     <PackageReference Include="Catel.Fody" Version="4.10.0" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.9.3" PrivateAssets="all" />
 	  <PackageReference Include="MethodTimer.Fody" Version="3.2.3" PrivateAssets="all" />
