--- a/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
+++ b/src/Orc.Automation.Recorder/Orc.Automation.Recorder.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Catel.Fody" Version="4.11.0" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.9.3" PrivateAssets="all" />
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.7.0" PrivateAssets="all" />
-    <PackageReference Include="Orc.Theming" Version="5.4.0-alpha0169" />
+    <PackageReference Include="Orc.Theming" Version="5.4.0" />
   </ItemGroup>
 
   <ItemGroup>
