--- a/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
+++ b/src/Orc.Automation.TestSync/Orc.Automation.TestSync.csproj
@@ -24,12 +24,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="6.2.0" />
-    <PackageReference Include="Catel.Fody" Version="4.11.0" PrivateAssets="all" />
+    <PackageReference Include="Catel.Core" Version="7.0.0-remove-ioc0079" />
+    <PackageReference Include="Catel.Fody" Version="4.12.0-alpha0118" PrivateAssets="all" />
+    <PackageReference Include="Catel.SourceGenerators" Version="1.0.0-alpha0027" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.9.3" PrivateAssets="all" />
-	<PackageReference Include="MethodTimer.Fody" Version="3.2.3" PrivateAssets="all" />
+	  <PackageReference Include="MethodTimer.Fody" Version="3.2.3" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.3.1" PrivateAssets="all" />
-    <PackageReference Include="Orc.CommandLine" Version="5.0.0" />
     <PackageReference Include="RestSharp" Version="113.0.0" />
   </ItemGroup>
   
