--- a/src/Orc.Automation/Orc.Automation.csproj
+++ b/src/Orc.Automation/Orc.Automation.csproj
@@ -25,12 +25,16 @@
 
   <ItemGroup>
     <PackageReference Include="Catel.Fody" Version="4.12.0-alpha0118" PrivateAssets="all" />
-    <PackageReference Include="Catel.SourceGenerators" Version="1.0.0-alpha0027" PrivateAssets="all" />
-    <PackageReference Include="Catel.MVVM" Version="7.0.0-remove-ioc0079" />
+    <PackageReference Include="Catel.SourceGenerators" Version="1.0.0-alpha0028" PrivateAssets="all" />
+    <!--<PackageReference Include="Catel.MVVM" Version="7.0.0-remove-ioc0079" />-->
     <PackageReference Include="Fody" Version="6.9.3" PrivateAssets="all" />
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="MethodTimer.Fody" Version="3.2.3" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.3.1" PrivateAssets="all" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Catel\src\Catel.MVVM\Catel.MVVM.csproj" />
   </ItemGroup>
 
   <!-- Theming -->
